--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,10 +54,13 @@ jobs:
         run: |
           echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-      - name: Setup SDL2 frameworks
-        uses: BrettDong/setup-sdl2-frameworks@main
+      - name: Setup SDL
+        uses: libsdl-org/setup-sdl@main
+        id: sdl
         with:
-          sdl2: latest
+          install-linux-dependencies: true
+          version: 2-latest
+          version-sdl-image: 2-latest
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
