--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -314,15 +314,15 @@ add_test(NAME test_OUT, COMMAND test_io_interrupts 0xd3)
 add_executable(test_diagnostics_asm test_diagnostics_asm.c)
 add_test(NAME diagnostic_asm, COMMAND test_diagnostics_asm)
 
-add_executable(test_state test_states.c)
-add_test(NAME test_state_at_10, COMMAND test_state 10)
-add_test(NAME test_state_at_15, COMMAND test_state 15)
-add_test(NAME test_state_at_25, COMMAND test_state 25)
-add_test(NAME test_state_at_100, COMMAND test_state 100)
-add_test(NAME test_state_at_1k, COMMAND test_state 1000)
-add_test(NAME test_state_at_10k, COMMAND test_state 10000)
-add_test(NAME test_state_at_25k, COMMAND test_state 25000)
-add_test(NAME test_state_at_37_5k, COMMAND test_state 37500)
+#add_executable(test_state test_states.c)
+#add_test(NAME test_state_at_10, COMMAND test_state 10)
+#add_test(NAME test_state_at_15, COMMAND test_state 15)
+#add_test(NAME test_state_at_25, COMMAND test_state 25)
+#add_test(NAME test_state_at_100, COMMAND test_state 100)
+#add_test(NAME test_state_at_1k, COMMAND test_state 1000)
+#add_test(NAME test_state_at_10k, COMMAND test_state 10000)
+#add_test(NAME test_state_at_25k, COMMAND test_state 25000)
+#add_test(NAME test_state_at_37_5k, COMMAND test_state 37500)
 #add_test(NAME test_state_at_50k, COMMAND test_state 50000)
 #add_test(NAME test_state_at_100k, COMMAND test_state 100000)
 
