Add flag to output stdout to github log if a test fails, add debug builds to the github builds, add condition for tests that require the ROM file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_compile_definitions(ROOT_DIR="${PROJECT_SOURCE_DIR}")
 add_executable(space_invaders_8080 src/main.c)
 
 # Build and add tests only in debug, not release
-#if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-enable_testing()
-add_subdirectory(tests)
-#endif ()
+if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    enable_testing()
+    add_subdirectory(tests)
+endif ()
