Refactor some of the code from main out to machine.c, fixed up the sound tests to use the new machine_out function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,15 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 
 # Create a library with all of the 8080 source code
-add_library(8080 src/shell.c src/state.c src/disassemble8080p.c
+add_library(8080
+        src/shell.c
+        src/state.c
+        src/disassemble8080p.c
         src/video.c
+        src/sound.c
         src/rom_sections.c
-        src/libattopng.c)
+        src/libattopng.c
+        src/machine.c)
 
 # Any executable after this will automatically link the 8080 library
 link_libraries(8080 ${SDL2_LIBRARY})
