--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -59,6 +59,7 @@ jobs:
         id: sdl
         with:
           version: 2-latest
+          version-sdl-mixer: 2-latest
           version-sdl-image: 2-latest
 
       - name: Configure CMake
