timing for windows no uses QueryPerformanceCounter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ add_library(8080 src/shell.c src/state.c src/disassemble8080p.c
         src/video.c
         src/rom_sections.c
         src/libattopng.c
-        src/controls.c)
+        src/controls.c
+        src/timer_win.c)
 
 # Any executable after this will automatically link the 8080 library
 link_libraries(8080 ${SDL2_LIBRARY})
