--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,6 @@ set(SDL2_MIXER_PATH "SDL2_mixer-2.8.0\\x86_64-w64-mingw32")
 # Include SDL2
 find_package(SDL2 REQUIRED)
 find_package(SDL2_mixer REQUIRED)
-
-# Opus support
-if (SDL_MIXER_ENABLE_OPUS)
-    find_path(OPUS_INCLUDE_DIR opus/opusfile.h)
-    find_package(ogg CONFIG REQUIRED)
-    find_package(Opus CONFIG REQUIRED)
-    find_library(OPUSFILE_LIBRARY opusfile)
-    list(APPEND SDL_MIXER_INCLUDES ${OPUS_INCLUDE_DIR})
-    list(APPEND SDL_MIXER_LIBRARIES ${OPUSFILE_LIBRARY} Ogg::ogg Opus::opus)
-    list(APPEND SDL_MIXER_DEFINES MUSIC_OPUS)
-endif ()
-
 include_directories(${SDL2_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR})
 
 # Create a library with all of the 8080 source code
@@ -43,17 +31,17 @@ add_compile_definitions(ROOT_DIR="${PROJECT_SOURCE_DIR}")
 add_executable(space_invaders_8080 src/main.c)
 
 # Copy the SDL2 dlls to the build folder
-#add_custom_command(
-#        TARGET space_invaders_8080 POST_BUILD
-#        COMMAND ${CMAKE_COMMAND} -E copy
-#        ${CMAKE_SOURCE_DIR}/SDL2-2.30.3/x86_64-w64-mingw32/bin/SDL2.dll
-#        ${CMAKE_CURRENT_BINARY_DIR}/SDL2.dll)
-#
-#add_custom_command(
-#        TARGET space_invaders_8080 POST_BUILD
-#        COMMAND ${CMAKE_COMMAND} -E copy
-#        ${CMAKE_SOURCE_DIR}/SDL2_mixer-2.8.0/x86_64-w64-mingw32/bin/SDL2_mixer.dll
-#        ${CMAKE_CURRENT_BINARY_DIR}/SDL2_mixer.dll)
+add_custom_command(
+        TARGET space_invaders_8080 POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+        ${CMAKE_SOURCE_DIR}/SDL2-2.30.3/x86_64-w64-mingw32/bin/SDL2.dll
+        ${CMAKE_CURRENT_BINARY_DIR}/SDL2.dll)
+
+add_custom_command(
+        TARGET space_invaders_8080 POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+        ${CMAKE_SOURCE_DIR}/SDL2_mixer-2.8.0/x86_64-w64-mingw32/bin/SDL2_mixer.dll
+        ${CMAKE_CURRENT_BINARY_DIR}/SDL2_mixer.dll)
 
 # Build and add tests only in debug, not release
 if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
@@ -61,15 +49,15 @@ if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     add_subdirectory(tests)
 
     # Copy the SDL2 dlls to the test folder
-    #    add_custom_command(
-    #            TARGET space_invaders_8080 POST_BUILD
-    #            COMMAND ${CMAKE_COMMAND} -E copy
-    #            ${CMAKE_SOURCE_DIR}/SDL2-2.30.3/x86_64-w64-mingw32/bin/SDL2.dll
-    #            ${CMAKE_CURRENT_BINARY_DIR}/tests/SDL2.dll)
-    #
-    #    add_custom_command(
-    #            TARGET space_invaders_8080 POST_BUILD
-    #            COMMAND ${CMAKE_COMMAND} -E copy
-    #            ${CMAKE_SOURCE_DIR}/SDL2_mixer-2.8.0/x86_64-w64-mingw32/bin/SDL2_mixer.dll
-    #            ${CMAKE_CURRENT_BINARY_DIR}/tests/SDL2_mixer.dll)
+    add_custom_command(
+            TARGET space_invaders_8080 POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/SDL2-2.30.3/x86_64-w64-mingw32/bin/SDL2.dll
+            ${CMAKE_CURRENT_BINARY_DIR}/tests/SDL2.dll)
+
+    add_custom_command(
+            TARGET space_invaders_8080 POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/SDL2_mixer-2.8.0/x86_64-w64-mingw32/bin/SDL2_mixer.dll
+            ${CMAKE_CURRENT_BINARY_DIR}/tests/SDL2_mixer.dll)
 endif ()
