--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 set(SDL2_PATH "SDL2-2.30.3\\x86_64-w64-mingw32")
 set(SDL2_MIXER_PATH "SDL2_mixer-2.8.0\\x86_64-w64-mingw32")
+set(SDL2_IMAGE_PATH "SDL2_image-2.8.2\\x86_64-w64-mingw32")
 set(SOURCES src/shell.c
         src/state.c
         src/disassemble8080p.c
@@ -27,13 +28,14 @@ endif ()
 # Include SDL2
 find_package(SDL2 REQUIRED)
 find_package(SDL2_mixer REQUIRED)
-include_directories(${SDL2_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR})
+find_package(SDL2_image REQUIRED)
+include_directories(${SDL2_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR})
 
 # Create a library with all of the 8080 source code
 add_library(8080 ${SOURCES})
 
 # Any executable after this will automatically link the 8080 library
-link_libraries(8080 ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARIES})
+link_libraries(8080 ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 
 add_compile_definitions(ROOT_DIR="${PROJECT_SOURCE_DIR}")
 
@@ -52,6 +54,12 @@ add_custom_command(
         ${CMAKE_SOURCE_DIR}/SDL2_mixer-2.8.0/x86_64-w64-mingw32/bin/SDL2_mixer.dll
         ${CMAKE_CURRENT_BINARY_DIR}/SDL2_mixer.dll)
 
+add_custom_command(
+        TARGET space_invaders_8080 POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+        ${CMAKE_SOURCE_DIR}/SDL2_image-2.8.2/x86_64-w64-mingw32/bin/SDL2_image.dll
+        ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image.dll)
+
 # Build and add tests only in debug, not release
 if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     enable_testing()
@@ -69,4 +77,10 @@ if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
             COMMAND ${CMAKE_COMMAND} -E copy
             ${CMAKE_SOURCE_DIR}/SDL2_mixer-2.8.0/x86_64-w64-mingw32/bin/SDL2_mixer.dll
             ${CMAKE_CURRENT_BINARY_DIR}/tests/SDL2_mixer.dll)
+
+    add_custom_command(
+            TARGET space_invaders_8080 POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/SDL2_image-2.8.2/x86_64-w64-mingw32/bin/SDL2_image.dll
+            ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image.dll)
 endif ()
