--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,16 +54,16 @@ jobs:
         run: |
           echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-      - name: Setup SDL
-        uses: libsdl-org/setup-sdl@main
-        id: sdl
-        with:
-          install-linux-dependencies: true
-          version: 2-latest
-          version-sdl-image: 2-latest
-          version-sdl-mixer: 2-latest
-          cmake-arguments: -DSDL2MIXER_VENDORED=ON
-
+#      - name: Setup SDL
+#        uses: libsdl-org/setup-sdl@main
+#        id: sdl
+#        with:
+#          install-linux-dependencies: true
+#          version: 2-latest
+#          version-sdl-image: 2-latest
+#          version-sdl-mixer: 2-latest
+#          cmake-arguments: -DSDL2MIXER_VENDORED=ON
+#
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
