--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,21 @@ set(CMAKE_C_STANDARD 11)
 
 # SDL2 folder structure and path
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
-set(SDL2_PATH "SDL2-2.30.3\\x86_64-w64-mingw32")
-set(SDL2_MIXER_PATH "SDL2_mixer-2.8.0\\x86_64-w64-mingw32")
+
+# Set CMAKE_PREFIX_PATH to include the Homebrew installation directory
+if(APPLE)
+    if(EXISTS "/opt/homebrew")
+        # Apple Silicon Homebrew location
+        set(CMAKE_PREFIX_PATH "/opt/homebrew")
+    else()
+        # Intel Homebrew location
+        set(CMAKE_PREFIX_PATH "/usr/local")
+    endif()
+else()
+    set(SDL2_PATH "SDL2-2.30.3\\x86_64-w64-mingw32")
+    set(SDL2_MIXER_PATH "SDL2_mixer-2.8.0\\x86_64-w64-mingw32")
+endif()
+
 set(SOURCES src/shell.c
         src/state.c
         src/disassemble8080p.c
